Fixed z-index in mobile-menu

--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -8,6 +8,7 @@
   background-color: var(--color-primary-light);
   transform: translateX(100%);
   transition: transform 0.3s;
+  z-index: 1;
 
   &::after {
     content: "";
